Preventing nav colapse on mobile.

--- a/public/css/front-end/blog.styl
+++ b/public/css/front-end/blog.styl
@@ -13,7 +13,7 @@ h6, .h6
   font-weight normal
   color #333
 
-@media (min-width &: 1200px)
+@media (min-width 1200px)
   .container
     width 970px
 
